# pvp-plugin

./: .gitignore  DOCUMENTATION.md  FEATURES_2026.md  IMPROVEMENTS_2026_COMPLETE.md  IMPROVEMENTS_2026_RECOMMENDATIONS.md  MANAGER_GUIDE.md  README.md  README_2026.md  SUMMARY_2026.md  UPGRADE_2026.md  build-output.txt  build.gradle.kts  dependency-reduced-pom.xml  err.txt  pom.xml  settings.gradle.kts
pvpkits-manager/: Cargo.toml  INSTALL.md  README.md
pvpkits-manager/src/: config.rs  logs.rs  main.rs  server.rs  ui.rs
src/main/kotlin/com/pvpkits/: Kit.kt  KitManager.kt  PvPKitsPlugin.kt
src/main/kotlin/com/pvpkits/analytics/: HeatmapCommand.kt  HeatmapManager.kt
src/main/kotlin/com/pvpkits/anticheat/: ModernAntiCheatManager.kt
src/main/kotlin/com/pvpkits/arena/: Arena.kt  ArenaCommand.kt  ArenaManager.kt  ArenaTemplate.kt  ImprovedArenaManager.kt  LobbyManager.kt
src/main/kotlin/com/pvpkits/combat/: CombatMechanicsManager.kt
src/main/kotlin/com/pvpkits/commands/: KitCommand.kt
src/main/resources/: config.yml  kits.yml  paper-plugin.yml  plugin.yml
suntier/: .eslintrc.json  .gitignore  ADMIN_GUIDE.md  BEST_PRACTICES_2026.md  IMPROVEMENTS_2026.md  INSTALL.md  QUICK_START_2026.md  README.md  SETUP.md  START.txt  database.js  index.html  package-lock.json  package.json  server.js  tsconfig.json  vite.config.ts
suntier/public/api/: players.json
suntier/src/: App.css  App.tsx  index.css  types.ts
suntier/src/components/: Admin.css  Admin.tsx  Auth.css  Auth.tsx  Icons.css  Icons.tsx  PlayerCard.css  PlayerCard.tsx  Profile.css  Profile.tsx
(+40 files in other folders)
