[package]
name = "pvpkits-manager"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
anyhow = "1.0"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
